--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -5,7 +5,7 @@
  </div>
  <mat-form-field appearance="standard">
   <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+   <input matInput  placeholder="Ex. Mia" #input>
 </mat-form-field>
  
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"  width="1200">
@@ -17,13 +17,17 @@
         <th mat-header-cell *matHeaderCellDef> CIN </th>
         <td mat-cell *matCellDef="let element"> {{element.cin}} </td>
       </ng-container>
-      <ng-container matColumnDef="name">
+      <ng-container matColumnDef="nom">
         <th mat-header-cell *matHeaderCellDef> NAME </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
       </ng-container>
-      <ng-container matColumnDef="createdDate">
+      <ng-container matColumnDef="prenom">
+        <th mat-header-cell *matHeaderCellDef> LastName</th>
+        <td mat-cell *matCellDef="let element"> {{element.prenom}} </td>
+      </ng-container>
+      <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef> CREATED DATE </th>
-        <td mat-cell *matCellDef="let element">  {{element.createdDate | date :'d MMMM y, HH:mm'}}
+        <td mat-cell *matCellDef="let element">  {{element.date | date :'d MMMM y, HH:mm'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="cv">
@@ -34,10 +38,18 @@
           </a>
         </td>
       </ng-container>
+      <ng-container matColumnDef="photoURL">
+        <th mat-header-cell *matHeaderCellDef> Photo</th>
+        <td mat-cell *matCellDef="let element"> {{element.photoURL}} </td>
+      </ng-container>
 
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> TYPE </th>
         <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+      </ng-container>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email</th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
