Fixed proxy issue and added email and prenom to member-form

--- a/src/app/member-form/member-form.component.html
+++ b/src/app/member-form/member-form.component.html
@@ -1,9 +1,38 @@
-<div >
-<form [formGroup]="form" (ngSubmit)="onSubmit()"> 
-        <mat-form-field class="inp"><input matInput placeholder="cin" formControlName="cin"></mat-form-field><br>
-        <mat-form-field class="inp"><input matInput placeholder="name" formControlName="name"></mat-form-field><br>
-        <mat-form-field class="inp"> <input matInput placeholder="cv" formControlName="cv" ></mat-form-field><br>
-        <mat-form-field class="inp"> <input matInput placeholder="type" formControlName="type"></mat-form-field><br>
-        <button mat-button type="submit">Submit</button>
-    </form>
+<div>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <mat-form-field class="inp"
+      ><input
+        matInput
+        placeholder="cin"
+        formControlName="cin" /></mat-form-field
+    ><br />
+    <mat-form-field class="inp"
+      ><input
+        matInput
+        placeholder="nom"
+        formControlName="nom" /></mat-form-field
+    ><br />
+    <mat-form-field class="inp"
+      ><input
+        matInput
+        placeholder="prenom"
+        formControlName="prenom" /></mat-form-field
+    ><br />
+    <mat-form-field class="inp"
+      ><input
+        matInput
+        placeholder="email"
+        formControlName="email" /></mat-form-field
+    ><br />
+    <mat-form-field class="inp">
+      <input matInput placeholder="cv" formControlName="cv" /></mat-form-field
+    ><br />
+    <mat-form-field class="inp">
+      <input
+        matInput
+        placeholder="type"
+        formControlName="type" /></mat-form-field
+    ><br />
+    <button mat-button type="submit">Submit</button>
+  </form>
 </div>
